pmail/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pmail
  labels:
    app.kubernetes.io/version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pmail
  template:
    metadata:
      labels:
        app: pmail
        app.kubernetes.io/version: v1
    spec:
      containers:
        - name: pmail
          image: ghcr.io/pmh-only/mail:latest
          ports:
            - name: web
              containerPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pmail-worker
  labels:
    app.kubernetes.io/version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pmail-worker
  template:
    metadata:
      labels:
        app: pmail-worker
        app.kubernetes.io/version: v1
    spec:
      containers:
        - name: pmail-worker
          image: ghcr.io/pmh-only/mail-worker:latest
