pmail/virtual-service.yml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: pmail
spec:
  hosts:
    - "mail.lth.so"
  gateways:
    - istio-ingress/public-gateway
  http:
    - route:
        - destination:
            host: pmail-service.pmail.svc.cluster.local
            port:
              number: 3000
      headers:
        response:
          set:
            Strict-Transport-Security: max-age=31536000; includeSubDomains
